# gs1-pln

./: .env.example  .gitignore  AUDITORIA_FINAL_PLN.md  Dockerfile  README.md  VALIDACAO_RUNTIME.md  docker-compose.yml  pyproject.toml  requirements.txt  validation_results.json
api/: dependencies.py  main.py
api/middleware/: auth.py
api/routers/: health.py  ingest.py  query.py  sources.py
api/schemas/: request.py  response.py
config/: logging_config.py  prompts.py  settings.py
corpus/: abesco_bems_guia_2022.txt  abnt_nbr_10844_2023.txt  abnt_nbr_15575_2021.txt  absolar_manual_fv_2023.txt  ana_manual_reuso_agua_2022.txt  aqua_hqe_referencial_2021.txt  ashrae_90.1_2022.txt  cbcs_agua_edificacoes_2022.txt  epe_atlas_solar_2022.txt  iea_tracking_buildings_2023.txt  jcp_2022_lca_green_buildings.txt  leed_v4.1_bdC_reference_guide.txt  procel_edifica_rtq_2021.txt  selo_casa_azul_plus_guia_2021.txt  sinduscon_guia_agua_cinza_2021.txt
document_store/: aquaenergy.db  sqlite_store.py  sueteres.db
domain/: entities.py  exceptions.py
evaluation/: __init__.py  avaliacao_rag.ipynb  evaluation_results.json  metrics.py  questions.py  runner.py  tsne_visualization.py
ingestion/: chunker.py  orchestrator.py
ingestion/cleaners/: duplicate_page_filter.py  header_footer_remover.py  ocr_noise_cleaner.py  structure_preserver.py
ingestion/loaders/: base.py  docx_loader.py  html_loader.py  pdf_loader.py  txt_loader.py
ingestion/normalizers/: encoding_normalizer.py  lexical_normalizer.py  section_tagger.py  whitespace_normalizer.py
rag/: citation_formatter.py  context_builder.py  embedder.py  guardrails.py  llm_client.py  pipeline.py  query_processor.py  reranker.py  retriever.py
scripts/: ingest_corpus.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_chunker.py  test_citation_formatter.py  test_guardrails.py  test_query_processor.py
vector_store/: base.py  chroma_store.py
