[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sueteres-rag"
version = "1.0.0"
description = "Assistente Técnico RAG para Edificações Eficientes em Água e Energia"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # Pydantic
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Vector store
    "chromadb>=0.5.0",
    # Embeddings + Reranker
    "sentence-transformers>=3.3.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    # Document loaders
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # Text processing
    "ftfy>=6.3.0",
    "chardet>=5.2.0",
    # OCR (opcional)
    "pytesseract>=0.3.13",
    "Pillow>=10.0.0",
    # Database
    "aiosqlite>=0.20.0",
    "sqlalchemy>=2.0.0",
    # HTTP client (Ollama)
    "httpx>=0.28.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
sueteres-ingest = "scripts.ingest_corpus:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=.",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=0",
    "-v",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = ["E501", "B008", "A003"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "scripts/*", ".venv/*", "*/migrations/*"]
